-fixed a bug where the elevator doors would immediately close (and the current floor would turn off) if going to next floor in queue
-increased elevator door speeds to match new sounds
-added basement levels to the Triton Center
-new intro screen (doesn't work yet on Linux)
-major performance improvements
-added keys w, a, s and d for movement

Version 1.2 (2.0 Alpha 2) - Jan 10, 2009
-------------------------
-added missing DLL for CS, and fixed installer
-added AddGround command, for creating tile grid-based grounds (fixes ground interference issue in 1.1)

Version 1.1 (2.0 Alpha 1) - Jan 6, 2009
-------------------------
-complete rewrite from scratch, using C++ and the Crystal Space graphics engine
-numerous features added that were not found in the 1.0 release


Changelog from old 1.0 tree:

Version 1.0
1.0 is being released now due to the massive overhauls and redesigns that have
rendered the main development Skyscraper tree unstable, and uncompilable at the moment.
1.0 is not complete in any way, and is still a primitive release.
1.0 is a fork of the stable 0.96 code, while the 0.97 code (renamed 1.1 alpha) is under development.
-----------
-fixed up shaft and pipe shaft issues
-bundled with new installer

Version 0.96 (build 161)
-------------
-cleaned up elevator button code, and made it into a nice little algorithm
-fixed falling issue
-added error detection during startup, for the absence of the TrueVision engine
-fixed bugs in the Object Manager
-fixed up 134th floor, and reworked the pool
-rewrote elevator queuing system
-collision detection failure bug fixed
-reworked pipe shafts and crawl spaces
-new cinematic intro added (will be enhanced later)
-new functionality added to the simulator control panel
-automation added to the simulator control panel
-new buildings added
-building texture resolutions fixed
-ModelViewer application added

Version 0.95b (build 144)
-------------
-minor code changes
-adapted for the new TrueVision3D 6.2 engine
